# HNSW-Slim

./: .gitignore  CMakeLists.txt  README.md  hnsw_slim_client_update.cc  hnsw_slim_client_update_patch.cc  hnsw_slim_server_patch.cc  main.cc  main_partial.cc  prep_data.cc
HNSW-Slim/: .gitignore  CMakeLists.txt  README.md  hnsw_client.cc  hnsw_server.cc  hnsw_slim_client_update_patch.cc  hnsw_slim_server.cc  main.cc  main_partial.cc  query.proto  recall_knn.cc
HNSW-Slim/include/: strategy_include.h  util.h
HNSW-Slim/include/strategy/: brute_force_strategy.h  hnsw_slim_strategy.h  hnsw_slimq_strategy.h  hnsw_slimzero_strategy.h  hnsw_strategy.h  solve_strategy.h
include/: core.h  query.pb.h  strategy_include.h
